--- a/RailCannon/imgui.ini
+++ b/RailCannon/imgui.ini
@@ -54,22 +54,27 @@ Size=702,152
 Collapsed=0
 
 [Window][Rec1]
-Pos=1204,133
+Pos=732,589
 Size=387,185
 Collapsed=0
 
 [Window][Rec2]
-Pos=1206,322
+Pos=1189,710
 Size=386,186
-Collapsed=0
+Collapsed=1
 
 [Window][Rec3]
-Pos=1209,511
+Pos=1189,734
 Size=385,185
-Collapsed=0
+Collapsed=1
 
 [Window][Rec4]
-Pos=1208,703
+Pos=1192,755
 Size=385,186
+Collapsed=1
+
+[Window][Ball 1]
+Pos=37,563
+Size=410,307
 Collapsed=0
 
