--- a/RailCannon/RailCannon.vcxproj
+++ b/RailCannon/RailCannon.vcxproj
@@ -125,7 +125,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\ApplicationDebug.cpp" />
+    <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\component\CannonBall.cpp" />
     <ClCompile Include="src\component\Muzzle.cpp" />
     <ClCompile Include="src\component\ProjectileMotion.cpp" />
     <ClCompile Include="src\component\SimpleCollision2D.cpp" />
@@ -151,6 +152,8 @@
     <ClCompile Include="src\VertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\component\CannonBall.h" />
+    <ClInclude Include="src\component\Damageable.h" />
     <ClInclude Include="src\component\Drawable.h" />
     <ClInclude Include="src\component\Muzzle.h" />
     <ClInclude Include="src\component\Possessable.h" />
