--- a/RailCannon/imgui.ini
+++ b/RailCannon/imgui.ini
@@ -14,7 +14,7 @@ Size=1333,165
 Collapsed=0
 
 [Window][FPS]
-Pos=9,11
+Pos=6,846
 Size=345,48
 Collapsed=0
 
@@ -44,13 +44,13 @@ Size=919,131
 Collapsed=0
 
 [Window][TankA]
-Pos=65,577
-Size=702,193
+Pos=2,1
+Size=252,163
 Collapsed=0
 
 [Window][TankB]
-Pos=819,576
-Size=702,194
+Pos=1348,2
+Size=250,163
 Collapsed=0
 
 [Window][Rec1]
@@ -76,5 +76,15 @@ Collapsed=1
 [Window][Ball 1]
 Pos=37,563
 Size=410,307
+Collapsed=0
+
+[Window][Player 1]
+Pos=6,6
+Size=244,163
+Collapsed=0
+
+[Window][Player 2]
+Pos=1348,4
+Size=243,164
 Collapsed=0
 
