--- a/RailCannon/RailCannon.vcxproj.filters
+++ b/RailCannon/RailCannon.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="src\component\Smoke.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\component\Wind.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\test\Test.h">
@@ -1040,6 +1043,9 @@
     <ClInclude Include="src\component\Smoke.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\component\Wind.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\vendor\glm\detail\func_common.inl">
@@ -1453,5 +1459,6 @@
     <None Include="res\shaders\Basic.shader" />
     <None Include="res\shaders\Tank.shader" />
     <None Include="res\shaders\Smoke.shader" />
+    <None Include="res\shaders\Wind.shader" />
   </ItemGroup>
 </Project>
