--- a/RailCannon/imgui.ini
+++ b/RailCannon/imgui.ini
@@ -79,12 +79,17 @@ Size=410,307
 Collapsed=0
 
 [Window][Player 1]
-Pos=6,6
+Pos=1,3
 Size=244,163
 Collapsed=0
 
 [Window][Player 2]
 Pos=1348,4
 Size=243,164
+Collapsed=0
+
+[Window][Wind Gauge]
+Pos=610,822
+Size=930,71
 Collapsed=0
 
