--- a/RailCannon/RailCannon.vcxproj.filters
+++ b/RailCannon/RailCannon.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="src\component\Wind.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\component\Exploder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\test\Test.h">
@@ -1046,6 +1049,9 @@
     <ClInclude Include="src\component\Wind.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\component\Exploder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\vendor\glm\detail\func_common.inl">
@@ -1460,5 +1466,6 @@
     <None Include="res\shaders\Tank.shader" />
     <None Include="res\shaders\Smoke.shader" />
     <None Include="res\shaders\Wind.shader" />
+    <None Include="res\shaders\Explosion.shader" />
   </ItemGroup>
 </Project>
