--- a/RailCannon/RailCannon.vcxproj
+++ b/RailCannon/RailCannon.vcxproj
@@ -127,6 +127,7 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\component\Background.cpp" />
+    <ClCompile Include="src\component\BlockingArea.cpp" />
     <ClCompile Include="src\component\CannonBall.cpp" />
     <ClCompile Include="src\component\Exploder.cpp" />
     <ClCompile Include="src\component\Muzzle.cpp" />
@@ -157,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\component\Background.h" />
+    <ClInclude Include="src\component\BlockingArea.h" />
     <ClInclude Include="src\component\CannonBall.h" />
     <ClInclude Include="src\component\Damageable.h" />
     <ClInclude Include="src\component\Drawable.h" />
@@ -476,6 +478,7 @@
   <ItemGroup>
     <None Include="res\shaders\Basic.shader" />
     <None Include="res\shaders\Explosion.shader" />
+    <None Include="res\shaders\FlatColor.shader" />
     <None Include="res\shaders\Smoke.shader" />
     <None Include="res\shaders\Tank.shader" />
     <None Include="res\shaders\Wind.shader" />
