--- a/RailCannon/imgui.ini
+++ b/RailCannon/imgui.ini
@@ -79,7 +79,7 @@ Size=410,307
 Collapsed=0
 
 [Window][Player 1]
-Pos=3,2
+Pos=2,2
 Size=227,157
 Collapsed=0
 
@@ -92,4 +92,9 @@ Collapsed=0
 Pos=1391,848
 Size=202,50
 Collapsed=0
+
+[Window][Menu]
+Pos=771,10
+Size=73,54
+Collapsed=1
 
