--- a/RailCannon/imgui.ini
+++ b/RailCannon/imgui.ini
@@ -14,7 +14,7 @@ Size=1333,165
 Collapsed=0
 
 [Window][FPS]
-Pos=6,846
+Pos=0,1031
 Size=345,48
 Collapsed=0
 
@@ -79,22 +79,42 @@ Size=410,307
 Collapsed=0
 
 [Window][Player 1]
-Pos=2,2
+Pos=0,4
 Size=227,157
 Collapsed=0
 
 [Window][Player 2]
-Pos=1368,2
+Pos=1691,1
 Size=226,157
 Collapsed=0
 
 [Window][Wind Gauge]
-Pos=1391,848
+Pos=1716,1029
 Size=202,50
 Collapsed=0
 
 [Window][Menu]
-Pos=771,10
-Size=73,54
-Collapsed=1
+Pos=847,6
+Size=243,56
+Collapsed=0
+
+[Window][Conclusion]
+Pos=875,427
+Size=171,72
+Collapsed=0
+
+[Window][About]
+Pos=637,341
+Size=334,151
+Collapsed=0
+
+[Window][Controls]
+Pos=734,406
+Size=459,226
+Collapsed=0
+
+[Window][Status of the Game]
+Pos=877,504
+Size=170,167
+Collapsed=0
 
