--- a/RailCannon/RailCannon.vcxproj
+++ b/RailCannon/RailCannon.vcxproj
@@ -125,7 +125,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\ApplicationDebug2.cpp" />
+    <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\component\Background.cpp" />
     <ClCompile Include="src\component\BlockingArea.cpp" />
     <ClCompile Include="src\component\CannonBall.cpp" />
