--- a/RailCannon/imgui.ini
+++ b/RailCannon/imgui.ini
@@ -14,7 +14,7 @@ Size=1333,165
 Collapsed=0
 
 [Window][FPS]
-Pos=0,1031
+Pos=2,1026
 Size=345,48
 Collapsed=0
 
@@ -84,18 +84,18 @@ Size=227,157
 Collapsed=0
 
 [Window][Player 2]
-Pos=1691,1
+Pos=1694,1
 Size=226,157
 Collapsed=0
 
 [Window][Wind Gauge]
-Pos=1716,1029
+Pos=1714,1026
 Size=202,50
 Collapsed=0
 
 [Window][Menu]
-Pos=847,6
-Size=243,56
+Pos=793,4
+Size=319,56
 Collapsed=0
 
 [Window][Conclusion]
@@ -104,8 +104,8 @@ Size=171,72
 Collapsed=0
 
 [Window][About]
-Pos=637,341
-Size=334,151
+Pos=792,454
+Size=334,171
 Collapsed=0
 
 [Window][Controls]
@@ -116,5 +116,10 @@ Collapsed=0
 [Window][Status of the Game]
 Pos=877,504
 Size=170,167
+Collapsed=0
+
+[Window][Settings]
+Pos=808,449
+Size=305,186
 Collapsed=0
 
