--- a/RailCannon/RailCannon.vcxproj
+++ b/RailCannon/RailCannon.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="src\debug\Grid.cpp" />
     <ClCompile Include="src\debug\Rectangle.cpp" />
     <ClCompile Include="src\IndexBuffer.cpp" />
+    <ClCompile Include="src\rcutil\Saver.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\scene\GameScene.cpp" />
     <ClCompile Include="src\Shader.cpp" />
@@ -175,6 +176,7 @@
     <ClInclude Include="src\debug\Grid.h" />
     <ClInclude Include="src\debug\Rectangle.h" />
     <ClInclude Include="src\IndexBuffer.h" />
+    <ClInclude Include="src\rcutil\Saver.h" />
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\scene\GameScene.h" />
     <ClInclude Include="src\Shader.h" />
@@ -472,6 +474,7 @@
     <ClInclude Include="src\vendor\imgui\imstb_rectpack.h" />
     <ClInclude Include="src\vendor\imgui\imstb_textedit.h" />
     <ClInclude Include="src\vendor\imgui\imstb_truetype.h" />
+    <ClInclude Include="src\vendor\nlohmann\json.hpp" />
     <ClInclude Include="src\vendor\stb_image\stb_image.h" />
     <ClInclude Include="src\VertexArray.h" />
     <ClInclude Include="src\VertexBuffer.h" />
